Added line to include each section in a new page (commented)

--- a/notes_template.latex
+++ b/notes_template.latex
@@ -88,6 +88,9 @@
    {\normalfont\sffamily\normalsize\bfseries\color{cyan}}
    {\thesubsubsection}{1em}{}
 
+%new page for every section
+%\newcommand{\sectionbreak}{\clearpage}
+
 % Set custom table of contents title
 \renewcommand{\contentsname}{Table of contents}
 
